# degen_art

./: .gitignore  BUILD.gn  README.md  degen_art.iss
assets/: Readme.txt  buildwav.sh
src/: art.cc  art.h  degen_art.rc  framework.h  globals.h  main.cc  main.h  resource.h  utils.cc  utils.h  version.h
src/logging/: BUILD.gn  logging_base.h
src/res/: degen_art.manifest
